--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.7",
     "@apollo/server": "^4.3.3",
     "@as-integrations/next": "^1.2.0",
     "@next/font": "13.1.6",
