--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   "dependencies": {
     "@apollo/client": "^3.7.7",
     "@apollo/server": "^4.3.3",
+    "@apollo/subgraph": "^2.3.2",
     "@as-integrations/next": "^1.2.0",
     "@next/font": "13.1.6",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
     "mongoose": "^6.9.1",
     "next": "13.1.6",
+    "next-auth": "^4.19.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
