--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,2 @@
-MONGODB_URI = mongodb+srv://naveen:naveenojha@cluster0.4zqsizj.mongodb.net/astrotalk?retryWrites=true&w=majority
-
-
+MONGODB_URI = mongodb+srv://adesh-mvc:adesh-mvc@my-real-app.sij1qts.mongodb.net/?retryWrites=true&w=majority
+NEXTAUTH_SECRET = adesh-mvc
