--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,3 @@
 NEXTAUTH_SECRET = adesh-mvc
 MONGODB_URI = mongodb+srv://adesh-mvc:adesh-mvc@my-real-app.sij1qts.mongodb.net/?retryWrites=true&w=majority
+NEXTAUTH_URL = http://localhost:3000
