--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "13.1.6",
     "next-auth": "^4.19.2",
     "react": "18.2.0",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
