--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@as-integrations/next": "^1.2.0",
     "@next/font": "13.1.6",
     "bcryptjs": "^2.4.3",
+    "cookies": "^0.8.0",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "graphql": "^16.6.0",
