--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@next/font": "13.1.6",
     "apollo-upload-client": "^17.0.0",
     "bcryptjs": "^2.4.3",
+    "classnames": "^2.3.2",
     "cookies": "^0.8.0",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
