--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.7",
+    "@apollo/gateway": "^2.4.3",
     "@apollo/server": "^4.3.3",
     "@as-integrations/next": "^1.2.0",
     "@next/font": "13.1.6",
@@ -19,8 +20,11 @@
     "cookies": "^0.8.0",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "form-data": "^4.0.0",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
+    "graphql-upload": "^16.0.2",
+    "graphql-upload-minimal": "^1.5.4",
     "mongoose": "^6.9.1",
     "next": "13.1.6",
     "next-auth": "^4.19.2",
@@ -29,6 +33,7 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/graphql-upload": "^16.0.0",
     "babel-plugin-graphql-tag": "^3.3.0"
   }
 }
