--- a/package.json
+++ b/package.json
@@ -25,10 +25,14 @@
     "graphql-tag": "^2.12.6",
     "graphql-upload": "^16.0.2",
     "graphql-upload-minimal": "^1.5.4",
+    "imap": "^0.8.19",
+    "imap-simple": "^5.1.0",
     "imapflow": "^1.0.128",
+    "mailparser": "^3.6.4",
     "mongoose": "^6.9.1",
     "next": "13.1.6",
     "next-auth": "^4.19.2",
+    "node-imap": "^0.9.6",
     "nodemailer": "^6.9.3",
     "react": "18.2.0",
     "react-data-table-component": "^7.5.3",
