--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "form-data": "^4.0.0",
+    "formik": "^2.4.1",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
     "graphql-upload": "^16.0.2",
@@ -37,7 +38,10 @@
     "nodemailer": "^6.9.3",
     "react": "18.2.0",
     "react-data-table-component": "^7.5.3",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.44.3",
+    "react-select": "^5.7.3",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/graphql-upload": "^16.0.0",
