--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@apollo/gateway": "^2.4.3",
     "@apollo/server": "^4.3.3",
     "@as-integrations/next": "^1.2.0",
+    "@easepick/core": "^1.2.1",
     "@next/font": "13.1.6",
     "apollo-upload-client": "^17.0.0",
     "base64-stream": "^1.0.0",
