--- a/package.json
+++ b/package.json
@@ -13,11 +13,19 @@
     "@apollo/gateway": "^2.4.3",
     "@apollo/server": "^4.3.3",
     "@as-integrations/next": "^1.2.0",
+    "@aws-sdk/client-s3": "^3.370.0",
+    "@aws-sdk/hash-node": "^3.370.0",
+    "@aws-sdk/protocol-http": "^3.370.0",
+    "@aws-sdk/s3-request-presigner": "^3.370.0",
+    "@aws-sdk/url-parser": "^3.370.0",
+    "@aws-sdk/util-format-url": "^3.370.0",
     "@easepick/amp-plugin": "^1.2.1",
     "@easepick/core": "^1.2.1",
     "@easepick/range-plugin": "^1.2.1",
     "@next/font": "13.1.6",
     "apollo-upload-client": "^17.0.0",
+    "aws-sdk": "^2.1416.0",
+    "axios": "^1.4.0",
     "base64-stream": "^1.0.0",
     "bcryptjs": "^2.4.3",
     "classnames": "^2.3.2",
@@ -26,7 +34,7 @@
     "eslint-config-next": "13.1.6",
     "form-data": "^4.0.0",
     "formik": "^2.4.1",
-    "graphql": "^16.6.0",
+    "graphql": "^16.7.1",
     "graphql-tag": "^2.12.6",
     "graphql-upload": "^16.0.2",
     "graphql-upload-minimal": "^1.5.4",
@@ -35,8 +43,10 @@
     "imapflow": "^1.0.128",
     "mailparser": "^3.6.4",
     "mongoose": "^6.9.1",
+    "multer": "^1.4.5-lts.1",
     "next": "13.1.6",
     "next-auth": "^4.19.2",
+    "next-connect": "^1.0.0",
     "node-imap": "^0.9.6",
     "nodemailer": "^6.9.3",
     "react": "18.2.0",
