react-dropzone-uploader

--- a/.env.local
+++ b/.env.local
@@ -2,15 +2,9 @@ NEXTAUTH_SECRET = adesh-mvc
 MONGODB_URI = mongodb+srv://adesh-mvc:adesh-mvc@my-real-app.sij1qts.mongodb.net/?retryWrites=true&w=majority
 NEXTAUTH_URL = http://localhost:3000
 
-
-ACCESS_KEY_ID=AKIAYD42WOPWQW7TKFNR
-SECRET_ACCESS_KEY=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
-REGION=ap-south-1
-BUCKET_NAME=mycdapp
-
 REGION = ap-south-1
-S3_ACCESS_KEY = AKIAYD42WOPWQW7TKFNR
-S3_SECRET_KEY = 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
+S3_ACCESS_KEY = AKIAYD42WOPWV53VMLFS
+S3_SECRET_KEY = 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
 S3_BUCKET_NAME =mycdapp
 
 
