--- a/package.json
+++ b/package.json
@@ -14,11 +14,7 @@
     "@apollo/server": "^4.3.3",
     "@as-integrations/next": "^1.2.0",
     "@aws-sdk/client-s3": "^3.370.0",
-    "@aws-sdk/hash-node": "^3.370.0",
-    "@aws-sdk/protocol-http": "^3.370.0",
     "@aws-sdk/s3-request-presigner": "^3.370.0",
-    "@aws-sdk/url-parser": "^3.370.0",
-    "@aws-sdk/util-format-url": "^3.370.0",
     "@easepick/amp-plugin": "^1.2.1",
     "@easepick/core": "^1.2.1",
     "@easepick/range-plugin": "^1.2.1",
@@ -52,6 +48,8 @@
     "react": "18.2.0",
     "react-data-table-component": "^7.5.3",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-dropzone-uploader": "^2.11.0",
     "react-hook-form": "^7.44.3",
     "react-select": "^5.7.3",
     "react-toastify": "^9.1.3"
