--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "imap-simple": "^5.1.0",
     "imapflow": "^1.0.128",
     "mailparser": "^3.6.4",
+    "merge-files": "^0.1.2",
     "mongoose": "^6.9.1",
     "multer": "^1.4.5-lts.1",
     "next": "13.1.6",
@@ -53,7 +54,8 @@
     "react-dropzone-uploader": "^2.11.0",
     "react-hook-form": "^7.44.3",
     "react-select": "^5.7.3",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "turbodepot-node": "^7.0.3"
   },
   "devDependencies": {
     "@types/graphql-upload": "^16.0.0",
