--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "next-connect": "^1.0.0",
     "node-imap": "^0.9.6",
     "nodemailer": "^6.9.3",
+    "pdf-lib": "^1.17.1",
     "pdfkit": "^0.13.0",
     "react": "18.2.0",
     "react-data-table-component": "^7.5.3",
