--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "nodemailer": "^6.9.3",
     "pdf-lib": "^1.17.1",
     "pdfkit": "^0.13.0",
+    "pdfkit-table": "^0.1.99",
     "react": "18.2.0",
     "react-data-table-component": "^7.5.3",
     "react-dom": "18.2.0",
