--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "imap": "^0.8.19",
     "imap-simple": "^5.1.0",
     "imapflow": "^1.0.128",
+    "json-as-xlsx": "^2.5.4",
     "mailparser": "^3.6.4",
     "merge-files": "^0.1.2",
     "mongoose": "^6.9.1",
