--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "csv-writer": "^1.6.0",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "exceljs": "^4.3.0",
     "form-data": "^4.0.0",
     "formidable": "^3.5.0",
     "formik": "^2.4.1",
