--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@aws-sdk/s3-request-presigner": "^3.370.0",
     "@easepick/amp-plugin": "^1.2.1",
     "@easepick/core": "^1.2.1",
+    "@easepick/lock-plugin": "^1.2.1",
     "@easepick/range-plugin": "^1.2.1",
     "@next/font": "13.1.6",
     "apollo-upload-client": "^17.0.0",
@@ -35,12 +36,11 @@
     "formik": "^2.4.1",
     "graphql": "^16.7.1",
     "graphql-tag": "^2.12.6",
-    "graphql-upload": "^16.0.2",
-    "graphql-upload-minimal": "^1.5.4",
     "imap": "^0.8.19",
     "imap-simple": "^5.1.0",
     "imapflow": "^1.0.128",
     "json-as-xlsx": "^2.5.4",
+    "lodash": "^4.17.21",
     "mailparser": "^3.6.4",
     "merge-files": "^0.1.2",
     "mongoose": "^6.9.1",
@@ -51,14 +51,9 @@
     "node-imap": "^0.9.6",
     "nodemailer": "^6.9.3",
     "pdf-lib": "^1.17.1",
-    "pdfkit": "^0.13.0",
-    "pdfkit-table": "^0.1.99",
     "pdfmake": "^0.2.7",
     "react": "18.2.0",
-    "react-data-table-component": "^7.5.3",
     "react-dom": "18.2.0",
-    "react-dropzone": "^14.2.3",
-    "react-dropzone-uploader": "^2.11.0",
     "react-hook-form": "^7.44.3",
     "react-select": "^5.7.3",
     "react-toastify": "^9.1.3",
