--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "formik": "^2.4.1",
     "graphql": "^16.7.1",
     "graphql-tag": "^2.12.6",
+    "html-to-pdfmake": "^2.5.1",
     "imap": "^0.8.19",
     "imap-simple": "^5.1.0",
     "imapflow": "^1.0.128",
+    "jsdom": "^23.0.1",
     "json-as-xlsx": "^2.5.4",
     "lodash": "^4.17.21",
     "mailparser": "^3.6.5",
@@ -49,9 +51,10 @@
     "next-auth": "^4.19.2",
     "next-connect": "^1.0.0",
     "node-imap": "^0.9.6",
-    "nodemailer": "^6.9.3",
+    "nodemailer": "^6.9.7",
     "pdf-lib": "^1.17.1",
     "pdfmake": "^0.2.7",
+    "puppeteer": "^21.6.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.3",
